--- a/bx-project/bx-project.json
+++ b/bx-project/bx-project.json
@@ -1,8 +1,8 @@
 {
   "name": "Bx-Project",
   "title_th":"อัพเดทใหม่ !!",
-  "title_en":"Update",
-  "version":"0.1.5",
+  "title_en":"Update !!",
+  "version":"0.1.6",
   "detail_th": "- เพิ่มราคาตลาด coinmarketcap.com\n- Fixed Bugs",
-  "detail_en": "- add coinmarketcap.com market \n- Fixed Bugs"
+  "detail_en": "- add market coinmarketcap.com  \n- Fixed Bugs"
 }
