--- a/bx-project/bx-project.json
+++ b/bx-project/bx-project.json
@@ -3,6 +3,6 @@
   "title_th":"อัพเดทใหม่ !!",
   "title_en":"Update !!",
   "version":"0.1.6",
-  "detail_th": "- เพิ่มราคาตลาด coinmarketcap.com\n- Fixed Bugs",
-  "detail_en": "- add market coinmarketcap.com  \n- Fixed Bugs"
+  "detail_th": "- อัพเดท Privacy Policy ตามนโยบายของ play store",
+  "detail_en": "- update Privacy Policy followed play store policy"
 }
